# sdr2hdr

./: .gitignore  README.md  TRAINING_PLAN.md  pyproject.toml
models/: enhancement_model_20260310.onnx  enhancement_model_20260310.onnx.data  enhancement_model_20260310.pt
scripts/: export_model.py  prepare_data.py  train.py
src/sdr2hdr/: __init__.py  __main__.py  ai.py  app.py  cli.py  constants.py  core.py  dataset.py  gui.py  gui_main.py  io.py  masks.py  model.py  review.py  review_main.py
tests/: test_ai.py  test_app.py  test_cli.py  test_core.py  test_export_model.py  test_gui.py  test_gui_status.py  test_io.py  test_masks.py  test_model_dataset.py  test_prepare_data.py  test_train.py
