[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdr2hdr"
version = "0.1.0"
description = "Offline SDR to HDR10 video conversion pipeline."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.10",
]

[project.optional-dependencies]
ai = ["torch>=2.2"]
dev = ["pytest>=8.2"]

[project.scripts]
sdr2hdr = "sdr2hdr.cli:main"
sdr2hdr-gui = "sdr2hdr.gui:main"
sdr2hdr-frames = "sdr2hdr.review:frames_main"
sdr2hdr-compare = "sdr2hdr.review:compare_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
